As above, the problem is e4673369 clears all attachments blindly whenever (one of) the demuxer flags a meta-data update. That is OK if the cleared attachment came from the same demuxer; that is NOT OK if the attachments came from the meta engine or from another demuxer (in case the input has slaves).
commit 223a42c1
Author: Timothy B. Terriberry tterribe@xiph.org
Date: Sat Sep 20 10:16:33 2014 -0700
input: Tag attachments with the demuxer that produced themThis way, when metadata is updated, we only replace the attachmentsproduced by the demuxer whose metadata changed.Fixes [#11976](https://code.videolan.org/videolan/vlc/-/issues/11976)Tested by reverting the patch in [#11966](https://code.videolan.org/videolan/vlc/-/issues/11966) (with some fix-ups to pass theright arguments where the code had changed).Signed-off-by: Rémi Denis-Courmont <remi@remlab.net>