input: Tag attachments with the demuxer that produced them

This way, when metadata is updated, we only replace the attachments
produced by the demuxer whose metadata changed.

Fixes #11976

Tested by reverting the patch in #11966 (with some fix-ups to pass the
right arguments where the code had changed).

Signed-off-by: Rémi Denis-Courmont <remi@remlab.net>